gen/v25.1/rpk/rpk-debug-remote-bundle-start.adoc
= rpk debug remote-bundle start
:description: rpk debug remote-bundle start

Start a remote debug bundle collection in your cluster.

This command starts the debug collection process in a remote cluster that
you configured in flags, environment variables, or your rpk profile.

After starting the debug collection process, you can query the status with
'rpk debug remote-bundle status'. When it completes, you can download it with
'rpk debug remote-bundle download'.

Use the flag '--no-confirm' to avoid the confirmation prompt.

== Usage

[,bash]
----
rpk debug remote-bundle start [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|--controller-logs-size-limit |string |The size limit of the controller logs that can be stored in the bundle. For example: 3MB, 1GiB (default "132MB").

|--cpu-profiler-wait |duration |How long to collect samples for the CPU profiler. For example: 30s, 1.5m. Must be higher than 15s (default 30s).

|-h, --help |- |Help for start.

|--job-id |string |Custom UUID to assign to the job that generates the debug bundle.

|-l, --label-selector |stringArray |Comma-separated label selectors to filter your resources. For example: <label>=<value>,<label>=<value> (K8s only) (default [app.kubernetes.io/name=redpanda]).

|--logs-since |string |Include logs dated from specified date onward; (journalctl date format: YYYY-MM-DD, 'yesterday', or 'today'). See the journalctl documentation for more options (default "yesterday").

|--logs-size-limit |string |Read the logs until the given size is reached. For example: 3MB, 1GiB (default "100MiB").

|--logs-until |string |Include logs older than the specified date; (journalctl date format: YYYY-MM-DD, 'yesterday', or 'today'). See the journalctl documentation for more options.

|--metrics-interval |duration |Interval between metrics snapshots. For example: 30s, 1.5m (default 10s).

|--metrics-samples |int |Number of metrics samples to take (at the interval of --metrics-interval). Must be >= 2 (default 2).

|-n, --namespace |string |The namespace to use to collect the resources from (K8s only) (default "redpanda").

|--no-confirm |- |Disable confirmation prompt.

|-p, --partition |stringArray |Comma-separated partition IDs. When provided, rpk saves extra Admin API requests for those partitions. See the help for extended usage.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===